<resources>
    <string name="app_name">SelfAID</string>
    <string name="title_activity_main">SelfAID</string>

    <string name="api_url">http://10.0.2.2:5257/api/</string>

    <string name="database_name">selfaid.db</string>
    <string name="database_path">database/selfaid.db</string>

    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Zaloguj się</string>
    <string name="register_fragment_label">Zarejestruj się</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Main menu -->
    <string name="Menu_Challenges_Btn">Wyzwania</string>
    <string name="Menu_Emotions_Journal_Btn">Dziennik Emocji</string>
    <string name="Menu_About_Us_Btn">O nas</string>

    <!-- Emotions journal - menu -->
    <string name="EJ_Add_New_Entry_Btn">Dodaj wpis</string>

    <!-- Emotions journal - new entry -->
    <string name="EJ_Entry_Date">Data:</string>
    <string name="EJ_Entry_Date_Hint">DD/mm/YY</string>
    <string name="EJ_Entry_Choose_Date_Btn">Wybierz datę</string>
    <string name="EJ_Entry_Title">Tytuł:</string>
    <string name="EJ_Entry_Title_Hint">Tytuł jest opcjonalny</string>
    <string name="EJ_Entry_Choose_Emotion">Wybierz emocję</string>
    <string name="EJ_Entry_Emotion_Describtion_Btn">Opis emocji</string>
    <string name="EJ_Entry_Save_Btn">Zapisz</string>
    <string name="EJ_Entry_Add_New_Page_Btn">Dodaj kolejną emocję</string>

    <string name="Date">%1$s / %2$s / %3$d</string>

    <!-- Emotions journal - description of emotion -->
    <string name="EJ_EmotionDescription_Emotion_Name">Emocja</string>
    <string name="EJ_Emotion_Descripiton_Describtion">Opis emocji</string>
    <string name="EJ_Emotion_Descripiton_Back_Btn">Powrót</string>

    <!-- Emotions journal - saved entry -->
    <string name="Blank_Topic">Brak tematu</string>
    <string name="No_Respond">Brak odpowiedzi</string>
    <string name="Checked">Zaznaczono</string>
    <string name="Unchecked">Nie zaznaczono</string>
    <string name="None_Checked">Nie zaznaczono żadnej z opcji</string>

    <!-- Exercises -->
    <string name="Type_Answer">Wpisz odpowiedź</string>
    <string name="Progress_Scale_Question">%1$d/%2$d</string>

    <!-- Choose date dialog -->
    <string name="Date_Dialog_Cancel">Anuluj</string>
    <string name="Date_Dialog_Save">Zatwierdź</string>
    <string name="Date_Dialog_Choose_Date">Wybierz datę</string>
    <string name="EJ_List_Entry_Name">Data\nTytuł</string>

    <!-- Delete dialog -->
    <string name="Delete_Dialog_Question">Czy na pewno chcesz usunąć wpis?</string>
    <string name="Delete_Dialog_Confirm">Tak</string>
    <string name="Delete_Dialog_Cancel">Nie</string>


    <string name="EJ_SavedEntry_ChosenEmotion">Wybrana emocja:</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="Main_Login_Hint">Login</string>
    <string name="Main_Password_Hint">Hasło</string>
    <string name="Main_Login_Btn">Zaloguj się</string>
    <string name="Main_Register_Btn">Zarejestruj się</string>
    <string name="new_entry_button_when_entry_list_is_not_empty">New entry button when entry list is not empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>