<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:id="@+id/imgSelfAidText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_weight="7"
        android:contentDescription="@null"
        app:srcCompat="@drawable/selfaid1" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/Main_Login_Hint"
        android:inputType="text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/Main_Password_Hint"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:text="@string/Main_Login_Btn"
        android:textSize="18sp"
        android:backgroundTint="@color/said_pink_dark"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:text="@string/Main_Register_Btn"
        android:textSize="18sp"
        android:backgroundTint="@color/said_peach" />


</LinearLayout>